--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,10 +2,15 @@
 <resources>
     // Generic
     <string name="app_name">Photovolta</string>
+    <string name="help">Ayuda</string>
     <string name="icon_help">Icono de ayuda</string>
     <string name="username">Usuario</string>
     <string name="password">Contraseña</string>
     // Login view
+    <string name="logout">Cerrar sesión</string>
+    <string name="toolbar_close">Cerrar menú</string>
+    <string name="upload">Subir datos</string>
+    <string name="version">Versión: %1$s</string>
     <string name="login">Iniciar sesión</string>
     <string name="login_description">Inicia sesión para compartir tus datos de ciencia ciudadana!</string>
     <string name="login_no_account_question">¿No tienes cuenta? Solicita una <a href="TODO">aquí.</a></string>  // TODO: add link
@@ -19,4 +24,14 @@
     <string name="permission_localization_background">Ubicación en segundo plano</string>
     <string name="permission_bluetooth">Sensor Bluetooth</string>
     <string name="permission_notification">Mostrar Notificaciones</string>
+    <string name="settings">Configuración</string>
+    <string name="settings_app_behaviour">Comportamiento de la app</string>
+    <string name="settings_only_wifi_upload">Subir datos automáticamente al conectar a red WiFi</string>
+    <string name="settings_api_endpoint">Sección para servidores propios</string>
+    <string name="settings_api_address">IP</string>
+    <string name="settings_api_port">Puerto</string>
+    <string name="about">Sobre la app</string>
+    <string name="toolbar_open">Abrir menú</string>
+    <string name="logo">Logo</string>
+    <string name="credits">Aplicación desarrollada por el grupo ISI-IES de la Universidad Politécnica de Madrid.</string>
 </resources>
