--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,39 @@
 <resources>
     // Generic
     <string name="app_name">Photovolta</string>
-    <string name="icon_help">Help icon</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="logout">Log out</string>
+    <string name="about">About</string>
+    <string name="help">Help</string>
+    <string name="icon_help">Help icon</string>
+    <string name="toolbar_open">Open menu</string>
+    <string name="toolbar_close">Close menu</string>
+    <string name="upload">Upload data</string>
+    <string name="logo">Logo</string>
     // Login view
     <string name="login">Log In</string>
     <string name="login_description">Log In to start sharing your solar resource data!</string>
-    <string name="login_no_account_question">Don\'t have an account? Request one <a href="TODO">here.</a></string>  // TODO: add link
+    <string name="login_no_account_question">Don\'t have an account? Request one <a href="TODO">here.</a></string>
+    // TODO: add link
     // Welcome view
     <string name="welcome_continue">Start sharing measurements</string>
     <string name="welcome_message">Welcome to \nPhotovolta!</string>
     // Permissions view
     <string name="permissions_needed">The following permissions are required to use Photovolta. You will have access to the app once all permissions are granted:</string>
     <string name="permissions_show_in_settings">View permissions in system settings</string>
-    <string name="permission_localization">Localization</string>
-    <string name="permission_localization_background">Localization in background</string>
+    <string name="permission_localization">Location</string>
+    <string name="permission_localization_background">Location in background</string>
     <string name="permission_bluetooth">Bluetooth access</string>
     <string name="permission_notification">Push notifications</string>
+    // Settings view
+    <string name="settings">Settings</string>
+    <string name="settings_app_behaviour">App behaviour</string>
+    <string name="settings_only_wifi_upload">Upload data automatically when WiFi is connected</string>
+    <string name="settings_api_endpoint">Self-hosting zone</string>
+    <string name="settings_api_address">IP</string>
+    <string name="settings_api_port">Port</string>
+    // About view
+    <string name="version">Version: %1$s</string>
+    <string name="credits">App developed by the ISI-IES group at Universidad Politécnica de Madrid.</string>
 </resources>
