Squashed commit of the following:
commit 6d953d55695bfc6425803cdeb05faab1cad5a3e7
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 17:20:52 2024 +0000

    login view, todo

commit 9e3487e045e47b7d787850f60ba2381cf73b1a2a
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 17:20:37 2024 +0000

    mínima funcionalidad de mostrar beacons

commit 4659a0e58058f7597d4e74e960f42c596c3304bb
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 10:03:55 2024 +0000

    Test code to post to server

commit d6e5372782ef6b3fa6ec792a95ddd0fab2b583f1
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 08:17:20 2024 +0000

    update deps

commit 10ff3cb8615f4d733c91dedd4eaa531680990d4f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Nov 22 08:17:12 2024 +0000

    Fix DeprecationWarning

commit a63dddc4b00a6d3f98c6b9c7163778c647fe279b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:51:02 2024 +0000

    use singleton of beaconRefApp

commit 6f75a279795736d33cbe7106bdecc70009811311
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:50:22 2024 +0000

    unnecessary import

commit 8d44ad31299051ffa021bdbeeba8a217d64ad910
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Nov 21 08:50:06 2024 +0000

    rm basic logo

commit cb672e8668e208ca041e31a8278904cf282c9797
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 20 17:24:01 2024 +0000

    Add config for developing on debug

commit 911a3a755043e2a3947c675804aeb9f2427fd5f3
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Nov 20 14:09:52 2024 +0000

    add debug flag via BuildConfig

commit 745505091298d9d3f44eba2e3769bbb1949af760
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed N

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,9 @@
     <string name="logout">Cerrar sesión</string>
     <string name="toolbar_close">Cerrar menú</string>
     <string name="upload">Subir datos</string>
-    <string name="version">Versión: %1$s</string>
+    <string name="settings_user_token_message">Token para publicar datos en el servidor</string>
+    <string name="settings_only_wifi_upload_off">Los datos no se subirán automáticamente. Se requiere intervención del Usuario mediante el botón de Publicar.</string>
+    <string name="version">Versión: %1$s-%2$d</string>
     <string name="login">Iniciar sesión</string>
     <string name="login_description">Inicia sesión para compartir tus datos de ciencia ciudadana!</string>
     <string name="login_no_account_question">¿No tienes cuenta? Solicita una <a href="TODO">aquí.</a></string>  // TODO: add link
@@ -26,7 +28,7 @@
     <string name="permission_notification">Mostrar Notificaciones</string>
     <string name="settings">Configuración</string>
     <string name="settings_app_behaviour">Comportamiento de la app</string>
-    <string name="settings_only_wifi_upload">Subir datos automáticamente al conectar a red WiFi</string>
+    <string name="settings_only_wifi_upload">Subir datos solo con WiFi</string>
     <string name="settings_api_endpoint">Sección para servidores propios</string>
     <string name="settings_api_address">IP</string>
     <string name="settings_api_port">Puerto</string>
@@ -34,4 +36,10 @@
     <string name="toolbar_open">Abrir menú</string>
     <string name="logo">Logo</string>
     <string name="credits">Aplicación desarrollada por el grupo ISI-IES de la Universidad Politécnica de Madrid.</string>
+    <string name="permissions_title">Permisos necesarios</string>
+    <string name="permission_grant">Dar permiso</string>
+    <string name="settings_user_token">Clave del usuario</string>
+    <string name="settings_only_wifi_upload_on">Los datos se subirán automáticamente cuando se conecte a una red WiFi.</string>
+    <string name="beacons_detected_zero">No se detectan balizas</string>
+    <string name="beacons_detected_nonzero">Balizas detectadas: %1$d</string>
 </resources>
