--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,20 +20,38 @@
     <string name="welcome_continue">Start sharing measurements</string>
     <string name="welcome_message">Welcome to \nPhotovolta!</string>
     // Permissions view
+    <string name="permissions_title">Required permissions</string>
     <string name="permissions_needed">The following permissions are required to use Photovolta. You will have access to the app once all permissions are granted:</string>
     <string name="permissions_show_in_settings">View permissions in system settings</string>
     <string name="permission_localization">Location</string>
     <string name="permission_localization_background">Location in background</string>
     <string name="permission_bluetooth">Bluetooth access</string>
     <string name="permission_notification">Push notifications</string>
+    <string name="permission_grant">Grant</string>
     // Settings view
     <string name="settings">Settings</string>
-    <string name="settings_app_behaviour">App behaviour</string>
-    <string name="settings_only_wifi_upload">Upload data automatically when WiFi is connected</string>
+    <string name="settings_app_behaviour">Behaviour</string>
+    <string name="settings_only_wifi_upload">Upload only on WiFi</string>
     <string name="settings_api_endpoint">Self-hosting zone</string>
     <string name="settings_api_address">IP</string>
     <string name="settings_api_port">Port</string>
+    <string name="settings_user_token">User access token</string>
+    <string name="settings_user_token_message">Token to post data to server</string>
+    <string name="settings_only_wifi_upload_on">Data will be uploaded automatically when the device connects to a WiFi network.</string>
+    <string name="settings_only_wifi_upload_off">Data won\'t be uploaded automatically. User interaction through the Upload button is required.</string>
     // About view
-    <string name="version">Version: %1$s</string>
+    <string name="version">Version: %1$s-%2$d</string>
     <string name="credits">App developed by the ISI-IES group at Universidad Politécnica de Madrid.</string>
+    // Home view
+    <string name="beacons_detected_zero">No beacons detected</string>
+    <string name="beacons_detected_nonzero">Visible beacons: %1$d</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
