--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -13,6 +13,11 @@
     <string name="settings_user_token_message">Token para publicar datos en el servidor</string>
     <string name="settings_only_wifi_upload_off">Los datos no se subirán automáticamente. Se requiere intervención del Usuario mediante el botón de Publicar.</string>
     <string name="version">Versión: %1$s-%2$d</string>
+    <string name="delete">Eliminar</string>
+    <string name="delete_all">Eliminar todo</string>
+    <string name="stop_button">Detener sesión medidas</string>
+    <string name="start_button">Iniciar sesión medidas</string>
+    <string name="no">No</string>
     <string name="login">Iniciar sesión</string>
     <string name="login_description">Inicia sesión para compartir tus datos de ciencia ciudadana!</string>
     <string name="login_no_account_question">¿No tienes cuenta? Solicita una <a href="TODO">aquí.</a></string>  // TODO: add link
@@ -41,5 +46,19 @@
     <string name="settings_user_token">Clave del usuario</string>
     <string name="settings_only_wifi_upload_on">Los datos se subirán automáticamente cuando se conecte a una red WiFi.</string>
     <string name="beacons_detected_zero">No se detectan balizas</string>
-    <string name="beacons_detected_nonzero">Balizas detectadas: %1$d</string>
+    <string name="beacons_detected_nonzero">Balizas cercanas: %1$d</string>
+    <string name="beacon_last_read">Última lectura:</string>
+    <string name="beacons_detected_paused">Detección de balizas en pausa</string>
+    <string name="empty_all_data_confirmation">Esta acción no se puede deshacer.</string>
+    <string name="no_data_to_empty">¡No hay balizas que eliminar!</string>
+    <string name="no_data_to_export">¡No hay información para exportar!</string>
+    <string name="session_stopped">Sesión de medida finalizada</string>
+    <string name="beacon_details">Detalles de la baliza</string>
+    <string name="beacon_detail_description_hint">Descripción opcional de la baliza</string>
+    <string name="beacon_detail_tilt">Inclinación [grados]</string>
+    <string name="beacon_detail_direction">Orientación [grados]</string>
+    <string name="yes">Sí</string>
+    <string name="empty_all_data">¿Eliminar todo?</string>
+    <string name="settings_api_address_hint">http:// o https://</string>
+    <string name="session_started">Sesión de medida iniciada</string>
 </resources>
