--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,13 @@
     <string name="toolbar_close">Close menu</string>
     <string name="upload">Upload data</string>
     <string name="logo">Logo</string>
+    <string name="NaN" translatable="false">NaN</string>
+    <string name="delete">Delete</string>
+    <string name="delete_all">Delete all</string>
+    <string name="stop_button">Stop session</string>
+    <string name="start_button">Start session</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     // Login view
     <string name="login">Log In</string>
     <string name="login_description">Log In to start sharing your solar resource data!</string>
@@ -34,6 +41,7 @@
     <string name="settings_only_wifi_upload">Upload only on WiFi</string>
     <string name="settings_api_endpoint">Self-hosting zone</string>
     <string name="settings_api_address">IP</string>
+    <string name="settings_api_address_hint">http:// or https://</string>
     <string name="settings_api_port">Port</string>
     <string name="settings_user_token">User access token</string>
     <string name="settings_user_token_message">Token to post data to server</string>
@@ -44,7 +52,20 @@
     <string name="credits">App developed by the ISI-IES group at Universidad Politécnica de Madrid.</string>
     // Home view
     <string name="beacons_detected_zero">No beacons detected</string>
-    <string name="beacons_detected_nonzero">Visible beacons: %1$d</string>
+    <string name="beacons_detected_nonzero">Nearby beacons: %1$d</string>
+    <string name="beacon_last_read">Last read:</string>
+    <string name="beacons_detected_paused">Monitoring is disabled</string>
+    <string name="empty_all_data">Delete all data?</string>
+    <string name="empty_all_data_confirmation">This action can\'t be undone.</string>
+    <string name="no_data_to_empty">No beacons to empty!</string>
+    <string name="no_data_to_export">There isn\'t any data to export!</string>
+    <string name="session_started">Measurement session has started</string>
+    <string name="session_stopped">Measurement session has ended</string>
+    // Beacon details view
+    <string name="beacon_details">Beacon details</string>
+    <string name="beacon_detail_description_hint">Optional beacon description</string>
+    <string name="beacon_detail_tilt">Tilt [degrees]</string>
+    <string name="beacon_detail_direction">Direction [degrees]</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
