Squashed commit of the following:
commit b874ad351b276cfe3b6df39699f65dde5c0b3b13
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 12:03:11 2024 +0000

    validation of register and login fields, formatting

commit 29aa9bc32c409cc61e9b7697d821d5560108ac6b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:37 2024 +0000

    update app name

commit d1f7cf278e1711e438ccc40f1f781fe8aef30432
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:31 2024 +0000

    format and cleanup code

commit 068d29aac31edde15e6807e72f013f7abeb60652
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 13 10:08:13 2024 +0000

    update notifications strings

commit 266165f7c75d42e6f68f4a19946eb44bac567149
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 20:19:38 2024 +0000

    fcking fix all

commit 3e6ff1bf5ebc4972c00617369dd288b38cc3adb9
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 15:55:48 2024 +0000

    fix file creator to comply with server

commit bb161598fe63f25e9a7009c979e27ecc99c3fcd5
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 12:55:33 2024 +0000

    add upload method

commit d4185942aa7959ca8e60ecc108a289bdc305f079
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 12 12:55:16 2024 +0000

    session writer -> subclass a version writer // add unit test

commit 3c81aa236f5aebcc4f0a1a67802596e91ab2f19b
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Dec 11 22:54:17 2024 +0000

    add "ongoing meas session" notification

commit 2752364d34e1fab74eda03d3113ec4e53563f1b0
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Dec 11 22:54:00 2024 +0000

    fix user account persistence

commit 2a2b4f1547d1852b3e571f62b1fab4e98ae9a5cf
Autho

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     // Generic
-    <string name="app_name">Photovolta</string>
+    <string name="app_name">Programa adquisición VIPV</string>
     <string name="help">Ayuda</string>
     <string name="icon_help">Icono de ayuda</string>
     <string name="username">Usuario</string>
@@ -20,10 +20,10 @@
     <string name="no">No</string>
     <string name="login">Iniciar sesión</string>
     <string name="login_description">Inicia sesión para compartir tus datos de ciencia ciudadana!</string>
-    <string name="login_no_account_question">¿No tienes cuenta? Solicita una <a href="TODO">aquí.</a></string>  // TODO: add link
+    <string name="login_no_account_question">¿No tienes cuenta?</string>
     // Welcome view
     <string name="welcome_continue">Empezar a compartir medidas</string>
-    <string name="welcome_message">Bienvenid@ a \nPhotovolta!</string>
+    <string name="welcome_message">Bienvenid@ al  Programa de Adquisición VIPV!</string>
     // Permissions view
     <string name="permissions_needed">Photovolta requiere utilizar los siguientes permisos. Podrás acceder a la app cuando se hayan otorgado los permisos necesarios:</string>
     <string name="permissions_show_in_settings">Ver permisos en la configuración del sistema</string>
@@ -37,6 +37,7 @@
     <string name="settings_api_endpoint">Sección para servidores propios</string>
     <string name="settings_api_address">IP</string>
     <string name="settings_api_port">Puerto</string>
+    <string name="register">Regístrate</string>
     <string name="about">Sobre la app</string>
     <string name="toolbar_open">Abrir menú</string>
     <string name="logo">Logo</string>
@@ -61,4 +62,28 @@
     <string name="empty_all_data">¿Eliminar todo?</string>
     <string name="settings_api_address_hint">http:// o https://</string>
     <string name="session_started">Sesión de medida iniciada</string>
+    <string name="bad_email">Este correo no está registrado</string>
+    <string name="bad_password">Contraseña incorrecta</string>
+    <string name="prompt_email">Correo electrónico</string>
+    <string name="prompt_password">Contraseña</string>
+    <string name="action_sign_in">Iniciar sesión</string>
+    <string name="action_sign_in_short">Registrase</string>
+    <string name="welcome">¡Bienvenid@!</string>
+    <string name="invalid_username">Solo se admiten caracteres alfanuméricos y barra baja</string>
+    <string name="invalid_password">Al menos debe tener 8 caracteres</string>
+    <string name="invalid_email">Correo electrónico inválido</string>
+    <string name="login_failed">Inicio de sesión fallido</string>
+    <string name="connection_error">Problema en la conexión</string>
+    <string name="connection_error_message">No se pudo conectar al servidor. Compruebe su conectividad a Internet o pruebe más tarde.</string>
+    <string name="ok">OK</string>
+    <string name="prompt_username">Nombre de usuario</string>
+    <string name="prompt_password_again">Repetir la contraseña</string>
+    <string name="bad_email_already_registered">Este correo ya está registrado</string>
+    <string name="register_here">Regístrate aquí</string>
+    <string name="logged_out">Cuenta de usuario cerrada</string>
+    <string name="stop_notification_button">Detener</string>
+    <string name="notification_ongoing_title">Sessión de adquisición en curso</string>
+    <string name="notification_ongoing_text">Monitoreo de balizas activo.</string>
+    <string name="notification_ongoing_channel_name">Sesiones de adquisición de datos en curso</string>
+    <string name="invalid_password_equals">Las contraseñas no coinciden</string>
 </resources>
