Squashed commit of the following:
commit 1917c39b91eedf3c73e33d4ed273c27eed58ccc2
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 23 21:01:24 2024 +0100

    Hell yeah app is ready to go

commit 2125ea7a0f9c2188120502e8e83be6841dab37f7
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 23 21:00:56 2024 +0100

    cleanup, satisfy linter

commit 663d8d6300e8333615a39673ef8dd6d71c5dbeaf
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Sun Dec 22 19:33:48 2024 +0100

    notifications texts

commit 6c99e7df29cc83537ca531722efce56317753c93
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 14:03:18 2024 +0100

    upload of files, changed format

commit a9563d49b4e0596c270cadd1b0142179689cf9ee
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 11:11:14 2024 +0100

    tooltip start / stop button

commit f13ea39b665ebb1f461a3c714f3e6d93aa73cf7c
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 11:01:25 2024 +0100

    add tooltips to image buttons in home

commit c652f780fce40814285462991fa66a944bcebbfb
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 10:50:46 2024 +0100

    reduce mem consumption

commit 717d4253a302d4fffea5551e0576cc4f0577357e
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Dec 20 10:50:28 2024 +0100

    direct share of files via ACTION_SEND, most work of LoggingSession

commit 7e0037a37d35cec5be2fe62030ec4132463a4f9c
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 19 21:10:51 2024 +0100

    Clean FragHomeViewModel.kt

commit 10648d0071685b91ed2868bb1b732edc6381f97d
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Thu Dec 19 21:06:49 2024 +0100

    merge abstraction of session

commit 1fcc2f208c9d0e1dbe86f9fb6c1b8ad1b09068a2
Author: ech

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -35,7 +35,7 @@
     <string name="settings_app_behaviour">Comportamiento de la app</string>
     <string name="settings_only_wifi_upload">Subir datos solo con WiFi</string>
     <string name="settings_api_endpoint">Sección para servidores propios</string>
-    <string name="settings_api_address">IP</string>
+    <string name="settings_api_address">Dirección IP</string>
     <string name="settings_api_port">Puerto</string>
     <string name="register">Regístrate</string>
     <string name="about">Sobre la app</string>
@@ -51,9 +51,10 @@
     <string name="beacon_last_read">Última lectura:</string>
     <string name="beacons_detected_paused">Detección de balizas en pausa</string>
     <string name="empty_all_data_confirmation">Esta acción no se puede deshacer.</string>
-    <string name="no_data_to_empty">¡No hay balizas que eliminar!</string>
-    <string name="no_data_to_export">¡No hay información para exportar!</string>
+    <string name="empty_session_nothing_to_do">Sesión vacía</string>
+    <string name="no_data_to_share">No se puede compartir una sesión vacía</string>
     <string name="session_stopped">Sesión de medida finalizada</string>
+    <string name="share">Compartir sesión</string>
     <string name="beacon_details">Detalles de la baliza</string>
     <string name="beacon_detail_description_hint">Descripción opcional de la baliza</string>
     <string name="beacon_detail_tilt">Inclinación [grados]</string>
@@ -61,6 +62,7 @@
     <string name="yes">Sí</string>
     <string name="empty_all_data">¿Eliminar todo?</string>
     <string name="settings_api_address_hint">http:// o https://</string>
+    <string name="no_data_to_upload">No se puede subir una sesión vacía</string>
     <string name="session_started">Sesión de medida iniciada</string>
     <string name="bad_email">Este correo no está registrado</string>
     <string name="bad_password">Contraseña incorrecta</string>
@@ -86,4 +88,13 @@
     <string name="notification_ongoing_text">Monitoreo de balizas activo.</string>
     <string name="notification_ongoing_channel_name">Sesiones de adquisición de datos en curso</string>
     <string name="invalid_password_equals">Las contraseñas no coinciden</string>
+    <string name="settings_api_test">Comprobar conexión al servidor</string>
+    <string name="settings_api_valid">"Servicio configurado correctamente "</string>
+    <string name="settings_api_invalid">Servicio no disponible en la dirección especificada</string>
+    <string name="settings_api_testing">Probando la conexión con el servidor…</string>
+    <string name="notification_no_location_bluetooth_channel_name">Bluetooth o Ubicación desactivadas.</string>
+    <string name="notification_no_location_bluetooth_title">Se requiere atención</string>
+    <string name="notification_no_location_bluetooth_text">Bluetooth y Ubicación desactivados, actívelos por favor</string>
+    <string name="notification_no_location_text">Ubicación desactivada, actívala por favor</string>
+    <string name="notification_no_bluetooth_text">Bluetooth desactivado, actívelo por favor</string>
 </resources>
