--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,13 +40,17 @@
     <string name="settings_app_behaviour">Behaviour</string>
     <string name="settings_only_wifi_upload">Upload only on WiFi</string>
     <string name="settings_api_endpoint">Self-hosting zone</string>
-    <string name="settings_api_address">IP</string>
+    <string name="settings_api_address">Address</string>
     <string name="settings_api_address_hint">http:// or https://</string>
     <string name="settings_api_port">Port</string>
     <string name="settings_user_token">User access token</string>
     <string name="settings_user_token_message">Token to post data to server</string>
     <string name="settings_only_wifi_upload_on">Data will be uploaded automatically when the device connects to a WiFi network.</string>
     <string name="settings_only_wifi_upload_off">Data won\'t be uploaded automatically. User interaction through the Upload button is required.</string>
+    <string name="settings_api_test">Test API endpoint</string>
+    <string name="settings_api_valid">Endpoint is reachable</string>
+    <string name="settings_api_invalid">Could not reach endpoint</string>
+    <string name="settings_api_testing">Probing connection with server…</string>
     // About view
     <string name="version">Version: %1$s-%2$d</string>
     <string name="credits">App developed by the ISI-IES group at Universidad Politécnica de Madrid.</string>
@@ -57,10 +61,12 @@
     <string name="beacons_detected_paused">Monitoring is disabled</string>
     <string name="empty_all_data">Delete all data?</string>
     <string name="empty_all_data_confirmation">This action can\'t be undone.</string>
-    <string name="no_data_to_empty">No beacons to empty!</string>
-    <string name="no_data_to_export">There isn\'t any data to export!</string>
+    <string name="empty_session_nothing_to_do">Session cleared</string>
+    <string name="no_data_to_share">Cannot export an empty session</string>
+    <string name="no_data_to_upload">Cannot upload an empty session</string>
     <string name="session_started">Measurement session has started</string>
     <string name="session_stopped">Measurement session has ended</string>
+    <string name="share">Share session</string>
     // Beacon details view
     <string name="beacon_details">Beacon details</string>
     <string name="beacon_detail_description_hint">Optional beacon description</string>
@@ -86,9 +92,15 @@
     <string name="bad_email_already_registered">This email is already registered</string>
     <string name="register_here">Register here</string>
     <string name="logged_out">User logged out</string>
-    <string name="stop_notification_button">Stop</string>
+    <string name="invalid_password_equals">Passwords don\'t match</string>
+    // Notification strings
     <string name="notification_ongoing_channel_name">Ongoing Acquisition Sessions</string>
     <string name="notification_ongoing_title">Acquisition session underway</string>
     <string name="notification_ongoing_text">Beacon monitoring is active.</string>
-    <string name="invalid_password_equals">Passwords don\'t match</string>
+    <string name="stop_notification_button">Stop</string>
+    <string name="notification_no_location_bluetooth_channel_name">Bluetooth or Location disabled.</string>
+    <string name="notification_no_location_bluetooth_title">Attention required</string>
+    <string name="notification_no_location_bluetooth_text">Bluetooth and Location disabled, please enable them</string>
+    <string name="notification_no_location_text">Location disabled, please enable it</string>
+    <string name="notification_no_bluetooth_text">Bluetooth disabled, please enable it</string>
 </resources>
