Squashed commit of the following:
commit 27b43c10a1966b4cb8c390b0c0464c332ac6f2dd
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Jan 10 11:36:34 2025 +0000

    Update ApiUserSession.kt

commit 760db95ac6908fabdad8203fc65a997abacf24cd
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Jan 10 11:35:21 2025 +0000

    mejoras menores

commit 2397a93925414e986fdd7c423423e9befd36889a
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Jan 8 17:02:51 2025 +0000

    Avoid exception due to blank string

commit 9ca0f3672337e1137bb56ab60d24d85b69d3a760
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Wed Jan 8 17:02:31 2025 +0000

    Better error message

commit 35e5121963c7055838caf32dc3685d4dad718511
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Jan 3 13:45:58 2025 +0000

    changes to location service

commit 753ebcd4ccf6fb50db02c50f3840ce16d72b9684
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Jan 3 13:45:49 2025 +0000

    fix config changes to endpoint

commit f6265055a37e470acc49cab9230e087bcb5c799f
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Fri Jan 3 13:45:28 2025 +0000

    fix login from registered user on web

commit 8e28b9b3cc95720994247829bede74f035223416
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 30 14:04:28 2024 +0100

    docs ejemplo fichero

commit 1917c39b91eedf3c73e33d4ed273c27eed58ccc2
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 23 21:01:24 2024 +0100

    Hell yeah app is ready to go

commit 2125ea7a0f9c2188120502e8e83be6841dab37f7
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com>
Date:   Mon Dec 23 21:00:56 2024 +0100

    cleanup, satisfy linter

commit 663d8d6300e8333615a39673ef8dd6d71c5dbeaf
Author: echedey-ls <80125792+echedey-ls@users.noreply.github.com

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,7 +62,7 @@
     <string name="yes">Sí</string>
     <string name="empty_all_data">¿Eliminar todo?</string>
     <string name="settings_api_address_hint">http:// o https://</string>
-    <string name="no_data_to_upload">No se puede subir una sesión vacía</string>
+    <string name="no_data_to_upload">No hay sesiones pasadas pendientes de subir</string>
     <string name="session_started">Sesión de medida iniciada</string>
     <string name="bad_email">Este correo no está registrado</string>
     <string name="bad_password">Contraseña incorrecta</string>
