--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="empty_all_data_confirmation">This action can\'t be undone.</string>
     <string name="empty_session_nothing_to_do">Session cleared</string>
     <string name="no_data_to_share">Cannot export an empty session</string>
-    <string name="no_data_to_upload">Cannot upload an empty session</string>
+    <string name="no_data_to_upload">No past sessions pending for upload</string>
     <string name="session_started">Measurement session has started</string>
     <string name="session_stopped">Measurement session has ended</string>
     <string name="share">Share session</string>
