--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,10 @@
     <string name="icon_help">Help icon</string>
     <string name="toolbar_open">Open menu</string>
     <string name="toolbar_close">Close menu</string>
-    <string name="upload">Upload data</string>
+    <string name="all_sessions_upload">Upload saved sessions</string>
     <string name="logo">Logo</string>
     <string name="NaN" translatable="false">NaN</string>
     <string name="delete">Delete</string>
-    <string name="delete_all">Delete all</string>
     <string name="stop_button">Stop session</string>
     <string name="start_button">Start session</string>
     <string name="yes">Yes</string>
@@ -66,7 +65,8 @@
     <string name="no_data_to_upload">No past sessions pending for upload</string>
     <string name="session_started">Measurement session has started</string>
     <string name="session_stopped">Measurement session has ended</string>
-    <string name="share">Share session</string>
+    <string name="current_session_empty">Delete current session</string>
+    <string name="current_session_share">Share current session</string>
     // Beacon details view
     <string name="beacon_details">Beacon details</string>
     <string name="beacon_detail_description_hint">Optional beacon description</string>
