--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,12 @@
     <string name="settings_api_valid">Endpoint is reachable</string>
     <string name="settings_api_invalid">Could not reach endpoint</string>
     <string name="settings_api_testing">Probing connection with server…</string>
+    <string name="settings_color_theme">Color theme</string>
+    <array name="settings_color_theme_entries">
+        <item>System default</item>
+        <item>Light</item>
+        <item>Dark</item>
+    </array>
     // About view
     <string name="version">Version: %1$s-%2$d</string>
     <string name="credits">App developed by the ISI-IES group at Universidad Politécnica de Madrid.</string>
