add use offline mode, to avoid retriggering login land fragment

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -105,4 +105,6 @@
         <item>Claro</item>
         <item>Oscuro</item>
     </array>
+    <string name="want_to_use_offline_question">¿Quieres tomar medidas solo para ti?</string>
+    <string name="use_offline">Usar sin cuenta</string>
 </resources>
