--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,15 +37,13 @@
     // Settings view
     <string name="settings">Settings</string>
     <string name="settings_app_behaviour">Behaviour</string>
-    <string name="settings_only_wifi_upload">Upload only on WiFi</string>
+    <string name="settings_upload_behaviour_title">When sessions will be uploaded</string>
     <string name="settings_api_endpoint">Self-hosting zone</string>
     <string name="settings_api_address">Address</string>
     <string name="settings_api_address_hint">http:// or https://</string>
     <string name="settings_api_port">Port</string>
     <string name="settings_user_token">User access token</string>
     <string name="settings_user_token_message">Token to post data to server</string>
-    <string name="settings_only_wifi_upload_on">Data will be uploaded automatically when the device connects to a WiFi network.</string>
-    <string name="settings_only_wifi_upload_off">Data won\'t be uploaded automatically. User interaction through the Upload button is required.</string>
     <string name="settings_api_test">Test API endpoint</string>
     <string name="settings_api_valid">Endpoint is reachable</string>
     <string name="settings_api_invalid">Could not reach endpoint</string>
@@ -55,6 +53,11 @@
         <item>System default</item>
         <item>Light</item>
         <item>Dark</item>
+    </array>
+    <array name="settings_upload_options">
+        <item>Automatically when session ends</item>
+        <item>Automatically on WiFi and un-metered networks</item>
+        <item>Manually upload session files</item>
     </array>
     // About view
     <string name="version">Version: %1$s-%2$d</string>
